feat: finished desktop design

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </head>
   <body class="relative grid min-h-screen auto-rows-auto bg-violet">
     <header
-      class="mx-9 mt-[1.95rem] mb-[1.2rem] md:mx-[4.45rem] md:mb-[5.38rem] md:mt-[3.4rem]"
+      class="mx-9 mt-[1.95rem] mb-[1.2rem] md:mx-[4.45rem] md:mb-[2.9rem] md:mt-[3.4rem]"
     >
       <img
         class="h-auto w-[8rem] object-left-top md:w-[13.05rem]"
@@ -47,7 +47,7 @@
           Build The Community Your Fans Will Love
         </h1>
         <p
-          class="text-center text-base text-white opacity-70 md:text-left md:text-[1.15rem] md:text-lg md:leading-[1.65rem]"
+          class="text-center text-base text-white opacity-70 md:text-left md:text-[1.16rem] md:leading-[1.65rem]"
         >
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
@@ -59,10 +59,10 @@
           Register
         </button>
         <div
-          class="mb-[1.4rem] grid grid-flow-col gap-[0.5rem] place-self-center"
+          class="mb-[1.4rem] grid grid-flow-col gap-[0.5rem] place-self-end md:mb-0 md:mt-[11.3rem]"
         >
           <svg
-            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white"
+            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white md:h-10 md:w-10 md:p-[0.55rem]"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 320 512"
           >
@@ -71,7 +71,7 @@
             />
           </svg>
           <svg
-            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white"
+            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white md:h-10 md:w-10 md:p-[0.55rem]"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
           >
@@ -80,7 +80,7 @@
             />
           </svg>
           <svg
-            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white"
+            class="hover:bg-whifill-white h-8 w-8 cursor-pointer rounded-full border-2 border-white border-opacity-60 fill-white object-center p-[0.35rem] transition-all hover:fill-white md:h-10 md:w-10 md:p-[0.55rem]"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
           >
